force-app/main/default/objects/Course_Details__c/fields/Enrollment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fees__c</fullName>
    <label>Enrollment Fees</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>