force-app/main/default/objects/Course_Details__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <label>Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>ASP.net</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Perl</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>